--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -1359,7 +1359,7 @@ section .container-fluid {
   left: auto;
   font-size: 18px;
 }
-2:hover {
+h2:hover {
   color: #f76b6a;
 }
 .header-action-area .header-action .mini-cart-dropdown .cart-total-money {
