--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,9 +8,9 @@
 					<div class="swiper-slide">
 						<div class="slider-content-area" data-bg-img="assets/img/slider/slider-04.jpg">
 							<div class="slider-content">
-								<h5 class="sub-title">BEST PRICE : $866</h5>
-								<h2 class="title">NEW ARRIVAL</h2>
-								<h4>70% OFF THIS WINTER</h4>
+								<h5 class="sub-title">GIÁ TỐT : $866</h5>
+								<h2 class="">SẢN PHẨM MỚI</h2>
+								<h4>70% GIẢM GIÁ CHO FA</h4>
 								<p>There are many variations of passages of Lorem Ipsum availables, but the majority have
 									suffered alteration in some form.</p>
 								<a class="btn-slider" href="/shop">Shop Now</a>
@@ -20,9 +20,9 @@
 					<div class="swiper-slide">
 						<div class="slider-content-area" data-bg-img="assets/img/slider/slider-02.jpg">
 							<div class="slider-content">
-								<h5 class="sub-title">BEST PRICE : $866</h5>
-								<h2 class="title">NEW ARRIVAL</h2>
-								<h4>70% OFF THIS WINTER</h4>
+								<h5 class="sub-title">GIÁ TỐT : $866</h5>
+								<h2 >SẢN PHẨM MỚI</h2>
+								<h4>70% GIẢM GIÁ CHO FA</h4>
 								<p>There are many variations of passages of Lorem Ipsum availables, but the majority have
 									suffered alteration in some form.</p>
 								<a class="btn-slider" href="/shop">Shop Now</a>
@@ -47,7 +47,7 @@
 							<div class="row">
 								<div class="col-lg-7 m-auto">
 									<div class="section-title text-center">
-										<h2 class="title">New Arrivals</h2>
+										<h2 class="title">Sản phẩm mới</h2>
 									</div>
 								</div>
 							</div>
@@ -131,8 +131,8 @@
 										<i class="icon zmdi zmdi-pin"></i>
 									</div>
 									<div class="content">
-										<h5 class="title">Free shipping worldwide</h5>
-										<p>Freeship over oder $100</p>
+										<h5 class="title">Miễn phí giao hàng nội thành</h5>
+										<p>Miễn phí giao hàng cho đơn từ 1000k</p>
 									</div>
 								</div>
 							</div>
@@ -144,8 +144,8 @@
 										<i class="icon zmdi zmdi-headset"></i>
 									</div>
 									<div class="content">
-										<h5 class="title">Support 24/7</h5>
-										<p>Contact us 24 hours a day</p>
+										<h5 class="title">Hỗ trợ 24/7</h5>
+										<p>Kết nối với chúng tôi 24/24</p>
 									</div>
 								</div>
 							</div>
@@ -157,8 +157,8 @@
 										<i class="icon zmdi zmdi-card"></i>
 									</div>
 									<div class="content">
-										<h5 class="title">100% secure payment</h5>
-										<p>Your payment are safe with us.</p>
+										<h5 class="title">Bảo mật thông tin thanh toán</h5>
+										<p>Thông tin của bạn được bảo vệ bởi chúng tôi</p>
 									</div>
 								</div>
 							</div>
