--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -10,13 +10,13 @@
 							<nav class="breadcrumb-area">
 								<ul class="breadcrumb">
 									<li>
-										<a href="/">Home</a>
+										<a href="/">Trang chủ</a>
 									</li>
 									<li class="breadcrumb-sep">/</li>
-									<li>Product Details</li>
+									<li>Chi tiết sản phẩm</li>
 								</ul>
 							</nav>
-							<h4 class="title">Product Details</h4>
+							<h4 class="title">Chi tiết sản phẩm</h4>
 						</div>
 					</div>
 				</div>
