--- a/src/main/resources/templates/order/list.html
+++ b/src/main/resources/templates/order/list.html
@@ -26,16 +26,16 @@
 			<section class="product-area shopping-cart-area">
 				<div class="row my-3">
 					<div class="col-12">
-						<div class="bg-success text-white p-3">MY PURCHASES AND ORDERS</div>
+						<div class="bg-success text-white p-3">ĐƠN HÀNG ĐÃ ĐẶT VÀ MUA</div>
 						<div class="shopping-cart-wrap">
 							<div class="cart-table table-responsive">
 								<table class="table">
 									<thead>
 										<tr>
-											<th class="text-center">No.</th>
-											<th>Order No.</th>
-											<th>Order Date</th>
-											<th>Shipping Address</th>
+											<th class="text-center">STT.</th>
+											<th>Mã đặt hàng.</th>
+											<th>Ngày mua</th>
+											<th>Địa chỉ giao hàng</th>
 											<th class="text-center">#</th>
 										</tr>
 									</thead>
