--- a/src/main/resources/templates/layout/index.html
+++ b/src/main/resources/templates/layout/index.html
@@ -44,7 +44,7 @@
 									</li>
 									<li>
 										<i class="zmdi zmdi-email"></i>
-										<a href="mailto://duynhps18293@fpt.edu.vn">duyspph21810fpt.edu.vn</a>
+										<a href="mailto://duynhps18293@fpt.edu.vn">duyspph21810@fpt.edu.vn</a>
 									</li>
 								</ul>
 							</div>
@@ -77,7 +77,7 @@
 							<div class="widget-menu-wrap">
 								<ul class="nav-menu">
 									<li>
-										<a href="javascript:(0);">Contact us</a>
+										<a href="javascript:(0);">Liên hệ</a>
 									</li>
 									<li>
 										<a href="javascript:(0);">Help Center</a>
