--- a/src/main/resources/templates/layout/index.html
+++ b/src/main/resources/templates/layout/index.html
@@ -56,16 +56,16 @@
 							<div class="widget-menu-wrap">
 								<ul class="nav-menu">
 									<li>
-										<a href="javascript:(0);">New products</a>
+										<a href="javascript:(0);">Sản phẩm mới</a>
 									</li>
 									<li>
-										<a href="javascript:(0);">Top sellers</a>
+										<a href="javascript:(0);">Bán chạy</a>
 									</li>
 									<li>
-										<a href="javascript:(0);">Our stores</a>
+										<a href="javascript:(0);">Cửa hàn</a>
 									</li>
 									<li>
-										<a href="javascript:(0);">Account</a>
+										<a href="javascript:(0);">Tài khoản</a>
 									</li>
 								</ul>
 							</div>
