update view checkout

--- a/src/main/resources/templates/cart/checkout.html
+++ b/src/main/resources/templates/cart/checkout.html
@@ -72,6 +72,51 @@
 											</div>
 										</div>
 										<div class="col-12">
+											<div class="titel-ptgiao-hang" style="background-color: #f1f1f1;margin: 20px 0px 20px 0px;padding: 5px 20px 5px 20px;">
+												<p style="color: black; font-size: 23px; font-weight: 700">PHƯƠNG THỨC GIAO HÀNG</p>
+											</div>
+											<div class="row" style="padding: 0; margin: 0">
+												<div class="col-sm-2">
+													<input class="form-check-input" type="checkbox" value="" aria-label="Checkbox for following text input">
+												</div>
+												<div class="col-sm-7">
+													<p style="color: black">Tốc độ tiêu chuẩn (từ 2 - 5 ngày làm việc)</p>
+												</div>
+												<div class="col-sm-3">
+													<p style="margin-left: 65%;color: black">0 VNĐ</p>
+												</div>
+											</div>
+										</div>
+										<div class="col-12">
+											<div class="titel-ptgiao-hang" style="background-color: #f1f1f1;margin: 20px 0px 20px 0px;padding: 5px 20px 5px 20px;">
+												<p style="color: black; font-size: 23px; font-weight: 700">PHƯƠNG THỨC THANH TOÁN</p>
+											</div>
+											<div class="row" style="padding: 0; margin: 0">
+												<div class="col-sm-2">
+													<input class="form-check-input" type="checkbox" value="" aria-label="Checkbox for following text input">
+												</div>
+												<div class="col-sm-10">
+													<p style="color: black">Thanh toán trức tiếp khi giao hàng</p>
+												</div>
+											</div>
+											<div class="row" style="padding: 0; margin: 0">
+												<div class="col-sm-2">
+													<input class="form-check-input" type="checkbox" value="" aria-label="Checkbox for following text input">
+												</div>
+												<div class="col-sm-10">
+													<p style="color: black">Thanh toán bằng Thẻ quốc tế / Thẻ nội địa / QR Code</p>
+												</div>
+											</div>
+											<div class="row" style="padding: 0; margin: 0">
+												<div class="col-sm-2">
+													<input class="form-check-input" type="checkbox" value="" aria-label="Checkbox for following text input">
+												</div>
+												<div class="col-sm-10">
+													<p style="color: black">Thanh toán bằng ví MoMo</p>
+												</div>
+											</div>
+										</div>
+										<div class="col-12" style="margin-top: 20px">
 											<div class="btn-box">
 												<button class="btn-shipping" ng-click="order.purchase()">Continue to shipping</button>
 												<a class="btn-return" th:href="@{/cart/view}">Return to cart</a>
