--- a/src/main/resources/templates/order/list.html
+++ b/src/main/resources/templates/order/list.html
@@ -26,7 +26,7 @@
 			<section class="product-area shopping-cart-area">
 				<div class="row my-3">
 					<div class="col-12">
-						<div class="bg-success text-white p-3">ĐƠN HÀNG ĐÃ ĐẶT VÀ MUA</div>
+						<div class="bg-success text-white p-3">ĐƠN HÀNG</div>
 						<div class="shopping-cart-wrap">
 							<div class="cart-table table-responsive">
 								<table class="table">
