--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -41,27 +41,40 @@
 								<div class="col-lg-6">
 									<div class="product-single-info">
 										<h4 class="title">[[*{name}]]</h4>
+										<span class="prices"> DDIDAS</span>
 										<div class="prices">
 											<span class="price">$[[*{#numbers.formatDecimal(price,0,'COMMA',2,'POINT')}]]</span>
 										</div>
-										<div class="prices">Category: [[*{category.name}]]</div>
+										<div class="prices">Danh mục: [[*{category.name}]]</div>
+
 										<div class="rating-box-wrap">
 											<div class="rating-box">
 												<i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i
 													class="fa fa-star"></i> <i class="fa fa-star"></i>
 											</div>
 										</div>
-										<p>On the other hand, we denounce with righteous indignation and dislike men who are so
+										<p> On the other hand, we denounce with righteous indignation and dislike men who are so
 											beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that
 											they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to
 											those who fail in their duty through weakness of will</p>
+										<input type="radio" id="sizeS" name="size" value="S">
+										<label class="radio-label" for="sizeS">S</label>
+
+										<input type="radio" id="sizeM" name="size" value="M">
+										<label class="radio-label" for="sizeM">M</label>
+
+										<input type="radio" id="sizeL" name="size" value="L">
+										<label class="radio-label" for="sizeL">L</label>
+
+										<input type="radio" id="sizeXL" name="size" value="XL">
+										<label class="radio-label" for="sizeXL">XL</label>
 										<div class="product-action-simple">
+
 											<div class="product-wishlist">
-												<a href="javascript:(0);" class="btn-wishlist">Add to wishlist</a>
+												<a href="javascript:(0);" class="btn-wishlist">Thêm vào yêu thích</a>
 											</div>
 											<div class="payment-button">
-												<a th:attr="ng-click=@{|cart.add(${id})|}" th:href="@{/cart/view}" class="btn-payment">Add
-													to cart</a>
+												<a th:attr="ng-click=@{|cart.add(${id})|}" th:href="@{/cart/view}" class="btn-payment">Thêm vào giỏ</a>
 											</div>
 											<div class="social-sharing">
 												<span>Share:</span>
@@ -93,11 +106,11 @@
 							<ul class="nav product-tab-nav" id="ReviewTab" role="tablist">
 								<li role="presentation">
 									<a class="active" id="description-tab" data-bs-toggle="pill" href="#description" role="tab"
-										aria-controls="description" aria-selected="true">Description</a>
+										aria-controls="description" aria-selected="true">Mô tả</a>
 								</li>
 								<li role="presentation">
 									<a id="reviews-tab" data-bs-toggle="pill" href="#reviews" role="tab" aria-controls="reviews"
-										aria-selected="false">Reviews</a>
+										aria-selected="false">Đánh giá</a>
 								</li>
 							</ul>
 							<div class="tab-content product-tab-content" id="ReviewTabContent">
@@ -125,7 +138,7 @@
 														<div class="col-md-12">
 															<div class="form-group">
 																<label for="for_name">Name</label>
-																<input id="for_name" class="form-control" type="text" placeholder="Enter your name">
+																<input id="for_name" class="form-control" type="text" placeholder="Nhập tên">
 															</div>
 														</div>
 														<div class="col-md-12">
@@ -138,12 +151,12 @@
 														<div class="col-md-12">
 															<div class="form-group">
 																<label for="for_comment">Content</label>
-																<textarea id="for_comment" class="form-control" placeholder="Write your comments here"></textarea>
+																<textarea id="for_comment" class="form-control" placeholder="Nhập đánh giá"></textarea>
 															</div>
 														</div>
 														<div class="col-md-12">
 															<div class="form-submit-btn">
-																<button type="submit" class="btn-submit">Post comment</button>
+																<button type="submit" class="btn-submit">Bình luận</button>
 															</div>
 														</div>
 													</div>
@@ -164,7 +177,7 @@
 				<div class="row">
 					<div class="col-lg-7 m-auto">
 						<div class="section-title text-center">
-							<h2 class="title">Related Products</h2>
+							<h2 class="title">Sản phẩm tương tự</h2>
 						</div>
 					</div>
 				</div>
