--- a/src/main/resources/templates/layout/index.html
+++ b/src/main/resources/templates/layout/index.html
@@ -108,18 +108,18 @@
 				</div>
 			</div>
 		</div>
-		<div class="footer-bottom">
-			<div class="container">
-				<div class="row">
-					<div class="col-12">
-						<p class="copyright">
-							© 2023, DStore. Made with <i class="fa fa-heart icon-heart"></i> by
-							<a href="javascript:(0);"> DuySp</a>
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
+<!--		<div class="footer-bottom">-->
+<!--			<div class="container">-->
+<!--				<div class="row">-->
+<!--					<div class="col-12">-->
+<!--						<p class="copyright">-->
+<!--							© 2023, DStore. Made with <i class="fa fa-heart icon-heart"></i> by-->
+<!--							<a href="javascript:(0);"> DuySp</a>-->
+<!--						</p>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--		</div>-->
 	</footer>
 
 	<div id="scroll-to-top" class="scroll-to-top">
