--- a/src/main/resources/templates/order/detail.html
+++ b/src/main/resources/templates/order/detail.html
@@ -13,7 +13,7 @@
 										<a href="/">Trang chủ</a>
 									</li>
 									<li class="breadcrumb-sep">/</li>
-									<li>Gio hàng</li>
+									<li>Giỏ hàng</li>
 								</ul>
 							</nav>
 							<h4 class="title">Thông tin mua hàng</h4>
@@ -25,14 +25,14 @@
 		<div class="container my-3" th:object="${order}">
 			<div class="account-form-wrap" style="padding: 0; box-shadow: none;">
 				<div class="login-form">
-					<div class="bg-success text-white p-3">THÔNG TIN MUA HÀNG</div>
+					<div class="text-white p-3"  style="background-color: #f27474;">THÔNG TIN MUA HÀNG</div>
 					<div class="row mt-2 mx-2">
 						<div class="form-group col-sm-4">
 							<label class="form-label">Mã mua:</label>
 							<input th:field="*{id}" class="form-control" readonly>
 						</div>
 						<div class="form-group col-sm-4">
-							<label class="form-label">Tên ngưởi đặt:</label>
+							<label class="form-label">Tên người đặt:</label>
 							<input th:field="*{account.username}" class="form-control" readonly>
 						</div>
 						<div class="form-group col-sm-4">
@@ -49,7 +49,7 @@
 			<section class="product-area shopping-cart-area">
 				<div class="row my-3">
 					<div class="col-12">
-						<div class="bg-success text-white p-3">THÔNG TIN ĐẶT HÀNG</div>
+						<div class="text-white p-3" style="background-color: #f27474;">THÔNG TIN ĐẶT HÀNG</div>
 						<div class="shopping-cart-wrap">
 							<div class="cart-table table-responsive">
 								<table class="table">
