--- a/src/main/resources/templates/layout/index.html
+++ b/src/main/resources/templates/layout/index.html
@@ -26,7 +26,7 @@
 		</main>
 	</div>
 
-	<footer class="footer-area">
+	<footer class="footer-area" style="margin-top: 80px  ">
 		<div class="footer-top-area">
 			<div class="container">
 				<div class="row">
