--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -65,17 +65,14 @@
 
 
 
-
-
-
 								<div class="col-lg-6">
 									<div class="product-single-info">
 										<h4 class="title">[[*{SanPham.Ten}]]</h4>
-										<div class="prices">[[*{CoAo.name}]]</div>
+										<div class="prices">[[*{ThuongHieu.name}]]</div>
 										<div class="prices">
 											<span class="price">$[[*{#numbers.formatDecimal(GiaBan,0,'COMMA',2,'POINT')}]]</span>
 										</div>
-										<div class="prices">Danh mục: [[*{ThuongHieu.name}]]</div>
+										<div class="prices">Tag: [[*{CoAo.name}]], [[*{LoaiKhachHang.name}]]</div>
 
 										<div class="rating-box-wrap">
 											<div class="rating-box">
@@ -83,7 +80,7 @@
 													class="fa fa-star"></i> <i class="fa fa-star"></i>
 											</div>
 										</div>
-										<p> [[*{CoAo.name}]],[[*{ChatLieu.name}]],[[*{ChatLieu.name}]]</p>
+										<p> [[*{SanPham.MoTa}]]</p>
 										<input type="radio" id="sizeS" name="size" value="S">
 										<label class="radio-label" for="sizeS">S</label>
 
@@ -145,6 +142,7 @@
 									aria-labelledby="description-tab">
 									<div class="product-description">
 										<p class="mb-0">[[*{SanPham.MoTa}]]</p>
+										<p>Thương hiệu:[[*{ThuongHieu.Name}]]</p>
 									</div>
 								</div>
 								<div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
