half update pageSP

--- a/src/main/resources/templates/layout/_menu.html
+++ b/src/main/resources/templates/layout/_menu.html
@@ -16,6 +16,9 @@
 						<li>
 							<a href="/">Trang chủ</a>
 						</li>
+						<li>
+							<a href="sanpham">Sản phẩm</a>
+						</li>
 						<li class="has-submenu">
 							<a>Danh mục</a>
 							<ul class="submenu-nav">
