--- a/src/main/resources/templates/auth/change-password.html
+++ b/src/main/resources/templates/auth/change-password.html
@@ -10,13 +10,13 @@
 							<nav class="breadcrumb-area">
 								<ul class="breadcrumb">
 									<li>
-										<a href="/">Home</a>
+										<a href="/">Trang chủ</a>
 									</li>
 									<li class="breadcrumb-sep">/</li>
 									<li>Account</li>
 								</ul>
 							</nav>
-							<h4 class="title">Change Password</h4>
+							<h4 class="title">Đổi mật khẩu</h4>
 						</div>
 					</div>
 				</div>
@@ -30,7 +30,7 @@
 						<div class="account-form-wrap">
 							<div class="login-form">
 								<div class="content">
-									<h4 class="title">Change Password</h4>
+									<h4 class="title">Đổi mật khẩu</h4>
 									<p>Choose a strong password and don't reuse the password for other accounts.</p>
 								</div>
 								<form th:action="@{/auth/change-password}" method="post">
@@ -41,29 +41,29 @@
 											</div>
 										</div>
 										<div class="col-12">
-											<label class="form-label">Username</label>
+											<label class="form-label">Tên đăng nhập</label>
 											<div class="form-group">
 												<input class="form-control text-muted" name="username" type="text"
 													th:value="${#request.remoteUser}" readonly>
 											</div>
 										</div>
 										<div class="col-12">
-											<label class="form-label">Password</label>
+											<label class="form-label">Mật khẩu mới</label>
 											<div class="form-group">
-												<input class="form-control" type="password" id="password" placeholder="Enter your password"
+												<input class="form-control" type="password" id="password" placeholder="Nhập mật khẩu mới"
 													required autofocus>
 											</div>
 										</div>
 										<div class="col-12">
-											<label class="form-label">Confirm Password</label>
+											<label class="form-label">Nhập lại mật khẩu</label>
 											<div class="form-group">
 												<input class="form-control" type="password" name="password"
-													placeholder="Enter confirm password" required oninput="checkPassword(this);">
+													placeholder="Nhập lại mật khẩu mới" required oninput="checkPassword(this);">
 											</div>
 										</div>
 										<div class="col-12">
 											<div class="login-form-group mt-0">
-												<button class="btn-sign d-block w-100" type="submit">Submit</button>
+												<button class="btn-sign d-block w-100" type="submit">Đổi mật khẩu</button>
 											</div>
 										</div>
 									</div>
