--- a/src/main/resources/templates/auth/forgot-password.html
+++ b/src/main/resources/templates/auth/forgot-password.html
@@ -10,13 +10,13 @@
 							<nav class="breadcrumb-area">
 								<ul class="breadcrumb">
 									<li>
-										<a href="/">Home</a>
+										<a href="/">Trang chủ</a>
 									</li>
 									<li class="breadcrumb-sep">/</li>
 									<li>Account</li>
 								</ul>
 							</nav>
-							<h4 class="title">Forgot Password</h4>
+							<h4 class="title">Quên mật khẩu</h4>
 						</div>
 					</div>
 				</div>
@@ -30,7 +30,7 @@
 						<div class="account-form-wrap">
 							<div class="login-form">
 								<div class="content">
-									<h4 class="title">Forgot Password</h4>
+									<h4 class="title">Quên mật khẩu</h4>
 									<p>Please enter your email address so we can send you an email to reset your password.</p>
 								</div>
 								<form th:action="@{/auth/forgot-password}" method="post">
@@ -41,14 +41,14 @@
 											</div>
 										</div>
 										<div class="col-12">
-											<label class="form-label">Email address</label>
+											<label class="form-label">Địa chỉ email</label>
 											<div class="form-group">
-												<input class="form-control" name="email" type="email" placeholder="Enter your email" required>
+												<input class="form-control" name="email" type="email" placeholder="Nhập email của bạn đã đăng kí" required>
 											</div>
 										</div>
 										<div class="col-12">
 											<div class="login-form-group mt-0">
-												<button class="btn-sign d-block w-100" type="submit">Submit</button>
+												<button class="btn-sign d-block w-100" type="submit">Quên mật khẩu</button>
 											</div>
 										</div>
 									</div>
