--- a/src/main/resources/templates/auth/reset-password.html
+++ b/src/main/resources/templates/auth/reset-password.html
@@ -10,13 +10,13 @@
 							<nav class="breadcrumb-area">
 								<ul class="breadcrumb">
 									<li>
-										<a href="/">Home</a>
+										<a href="/">Trang chủ</a>
 									</li>
 									<li class="breadcrumb-sep">/</li>
-									<li>Account</li>
+									<li>Tài khoản</li>
 								</ul>
 							</nav>
-							<h4 class="title">Reset Password</h4>
+							<h4 class="title">Đặt lại mật khẩu</h4>
 						</div>
 					</div>
 				</div>
@@ -30,7 +30,7 @@
 						<div class="account-form-wrap">
 							<div class="login-form">
 								<div class="content mb-3">
-									<h4 class="title">Reset Now</h4>
+									<h4 class="title">Đặt lại mật khẩu</h4>
 									<p></p>
 								</div>
 								<form th:action="@{/auth/reset-password}" method="post">
@@ -42,14 +42,14 @@
 										</div>
 										<input type="hidden" name="token" th:value="${token}" />
 										<div class="col-12">
-											<label class="form-label">Password</label>
+											<label class="form-label">Mật khẩu mới</label>
 											<div class="form-group">
 												<input class="form-control" type="password" id="password" name="password"
 													placeholder="Enter your password" required autofocus>
 											</div>
 										</div>
 										<div class="col-12">
-											<label class="form-label">Confirm Password</label>
+											<label class="form-label">Nhập lại mật khẩu</label>
 											<div class="form-group">
 												<input class="form-control" type="password" placeholder="Enter confirm password" required
 													oninput="checkPassword(this);">
@@ -57,7 +57,7 @@
 										</div>
 										<div class="col-12">
 											<div class="login-form-group mt-0">
-												<button class="btn-sign d-block w-100" type="submit">Submit</button>
+												<button class="btn-sign d-block w-100" type="submit">Đặt lại</button>
 											</div>
 										</div>
 									</div>
