--- a/src/main/resources/templates/layout/index.html
+++ b/src/main/resources/templates/layout/index.html
@@ -16,10 +16,7 @@
 	<link rel="stylesheet" type="text/css" th:href="@{assetss/css/components/except-home-page.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{assetss/css/components/used-in-js.css}"/>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css"/>
-	<link
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-			rel="stylesheet"
-	/>
+
 </head>
 <body ng-app="shopping-app" ng-controller="shopping-ctrl">
 	<div class="wrapper">
@@ -330,18 +327,18 @@
 		function genProductList(products) {
 			if (products.length > 0) {
 				let html = '';
-				for (product of products) {
+				for (product of ChiTietSanPham) {
 					html += `<a class="product position-relative" target="_blank" href="/san-pham/${product.slug}/${product.id}">
                             <div class="card"><img class="card-img-top"
-                                                   src="${product.image}"
-                                                   alt="${product.name}"/>
+                                                   src="${product.SanPham.image[0]}"
+                                                   alt="${product.SanPham.ten}"/>
                                 <div class="card-body">
-                                    <h5 class="card-title">${product.name}</h5>`
+                                    <h5 class="card-title">${product.SanPham.ten}</h5>`
 					if (product.promotionPrice > 0) {
 						html += `<p class="price"><span class="text-price">${product.promotionPrice}</span> &#x20AB;</p>
-                                 <p class="old-price"><span class="text-price">${product.price}</span> &#x20AB;</p>`
+                                 <p class="old-price"><span class="text-price">${product.giaBan}</span> &#x20AB;</p>`
 					} else {
-						html += `<p class="price"><span class="text-price">${product.price}</span> &#x20AB;</p>`
+						html += `<p class="price"><span class="text-price">${product.giaBan}</span> &#x20AB;</p>`
 					}
 					html += `
                                     <p class="card-text sold">Đã bán <span>${product.totalSold}</span> đôi</p>
