--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 		<div class="swiper-container swiper-slide-gap home-slider-container default-slider-container">
 			<div class="swiper-wrapper home-slider-wrapper slider-default">
 				<div class="swiper-slide">
-					<div class="slider-content-area" data-bg-img="assets/img/slider/slider-04.jpg">
+					<div class="slider-content-area" data-bg-img="assets/img/slider/slider-04.png">
 						<div class="slider-content">
 							<h5 class="sub-title">GIÁ TỐT : $866</h5>
 							<h2 class="">SẢN PHẨM MỚI</h2>
@@ -18,7 +18,7 @@
 					</div>
 				</div>
 				<div class="swiper-slide">
-					<div class="slider-content-area" data-bg-img="assets/img/slider/slider-02.jpg">
+					<div class="slider-content-area" data-bg-img="assets/img/slider/slider-02.png">
 						<div class="slider-content">
 							<h5 class="sub-title">GIÁ TỐT : $866</h5>
 							<h2 >SẢN PHẨM MỚI</h2>
