--- a/src/main/resources/templates/layout/_menu.html
+++ b/src/main/resources/templates/layout/_menu.html
@@ -5,7 +5,7 @@
 				<div class="header-logo-area">
 					
 					<a th:href="@{/}">
-						<p style="font-weight: bold; font-size: larger;">DuyStore</p>
+						<p style="font-weight: bold; font-size: larger;">GOTD</p>
 						
 					</a>
 				</div>
