--- a/src/main/resources/templates/order/detail.html
+++ b/src/main/resources/templates/order/detail.html
@@ -37,11 +37,16 @@
 						</div>
 						<div class="form-group col-sm-4">
 							<label class="form-label">Ngày đặt:</label>
-							<input th:field="*{createDate}" class="form-control" readonly>
+							<input th:field="*{ngayDatHang}" class="form-control" readonly>
 						</div>
 						<div class="form-group col-sm-12 mb-3">
 							<label class="form-label">Địa chỉ mua hàng:</label>
-							<input th:field="*{address}" class="form-control" readonly>
+							<div>
+								<div th:text="*{thanhPho}" class="form-control" readonly></div>
+								<div th:text="*{quan}" class="form-control" readonly></div>
+								<div th:text="*{dcChiTiet}" class="form-control" readonly></div>
+							</div>
+
 						</div>
 					</div>
 				</div>
@@ -64,12 +69,12 @@
 										</tr>
 									</thead>
 									<tbody>
-										<tr th:each="detail:*{orderDetails}" th:object="${detail}">
-											<td class="align-middle price">[[*{product.id}]]</td>
-											<td class="align-middle text-start">[[*{product.name}]]</td>
-											<td class="align-middle price">$[[*{#numbers.formatDecimal(price,0,'COMMA',2,'POINT')}]]</td>
-											<td class="align-middle">[[*{quantity}]]</td>
-											<td class="align-middle price">$[[*{#numbers.formatDecimal(price*quantity,0,'COMMA',2,'POINT')}]]</td>
+										<tr th:each="detail:*{chiTietDonHangList}" th:object="${detail}">
+											<td class="align-middle price">[[*{chiTietSanPham.sanPham.ma}]]</td>
+											<td class="align-middle text-start">[[*{chiTietSanPham.sanPham.ma}]]</td>
+											<td class="align-middle price">$[[*{#numbers.formatDecimal(donGia,0,'COMMA',2,'POINT')}]]</td>
+											<td class="align-middle">[[*{soLuong}]]</td>
+											<td class="align-middle price">$[[*{#numbers.formatDecimal(donGia*soLuong,0,'COMMA',2,'POINT')}]]</td>
 											<td class="align-middle price" > Chờ xác nhận</td>
 										</tr>
 									</tbody>
