--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -67,8 +67,8 @@
 
 								<div class="col-lg-6">
 									<div class="product-single-info">
-										<h4 class="title">[[*{SanPham.Ten}]]</h4>
-										<div class="prices">[[*{ThuongHieu.name}]]</div>
+										<h4 class="title">[[*{SanPham.ten}]]</h4>
+										<div class="prices">[[*{ThuongHieu.name}]] <p class="text-success">Số lượng: [[*{soLuong}]]</p> </div>
 										<div class="prices">
 											<span class="price">$[[*{#numbers.formatDecimal(GiaBan,0,'COMMA',2,'POINT')}]]</span>
 										</div>
@@ -80,20 +80,27 @@
 													class="fa fa-star"></i> <i class="fa fa-star"></i>
 											</div>
 										</div>
-										<p> [[*{SanPham.MoTa}]]</p>
-										<input type="radio" id="sizeS" name="size" value="S">
-										<label class="radio-label" for="sizeS">S</label>
 
-										<input type="radio" id="sizeM" name="size" value="M">
-										<label class="radio-label" for="sizeM">M</label>
+										<div class="form-group">
+											<select class="form-control" name="color" id="color">
+												<option th:each="color : ${m}" th:value="${color.code}" th:text="${color.name}"
+														th:selected="${item.getMauSac().getCode() == color.code}"></option>
+											</select>
+										</div>
+										<div class="row">
+										<div class="col-md-12">
+											<div class="btn-group" data-toggle="buttons">
+												<label class="btn btn-light" th:each="size : ${kc}">
+													<input type="radio" name="size" th:value="${size.code}" th:id="${'size' + size.code}"
+														   th:checked="${item.kichCo.code == size.code}" /> <!-- Kiểm tra điều kiện và chọn nếu đúng -->
+													<span th:text="${size.name}"></span>
+												</label>
+											</div>
+										</div>
+									</div>
 
-										<input type="radio" id="sizeL" name="size" value="L">
-										<label class="radio-label" for="sizeL">L</label>
 
-										<input type="radio" id="sizeXL" name="size" value="XL">
-										<label class="radio-label" for="sizeXL">XL</label>
 										<div class="product-action-simple">
-
 											<div class="product-wishlist">
 												<a href="javascript:(0);" class="btn-wishlist">Thêm vào yêu thích</a>
 											</div>
@@ -141,8 +148,13 @@
 								<div class="tab-pane fade show active" id="description" role="tabpanel"
 									aria-labelledby="description-tab">
 									<div class="product-description">
-										<p class="mb-0">[[*{SanPham.MoTa}]]</p>
-										<p>Thương hiệu:[[*{ThuongHieu.Name}]]</p>
+
+											<p>[[*{SanPham.MoTa}]]</p>
+
+
+
+
+
 									</div>
 								</div>
 								<div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
@@ -204,7 +216,29 @@
 				<div class="row">
 					<div class="col-12">
 						<div class="swiper-container swiper-slide-gap product-slider-container">
-
+							<div class="swiper-wrapper">
+								<div class="swiper-slide" th:each="p:*{thuongHieu.LThuongHieu}">
+									<div class="product-item">
+										<div class="inner-content">
+											<div class="product-thumb">
+												<a th:href="@{|/product/detail/${p.id}|}">
+													<img class="product-item m-auto d-block" th:src="@{|/assets/images/${p.sanPham.image[0].ma}|}">
+												</a>
+											</div>
+											<div class="product-desc">
+												<div class="product-info">
+													<h4 class="title">
+														<a th:href="@{|/product/detail/${p.id}|}">[[${p.sanPham.ten}]]</a>
+													</h4>
+													<div class="prices">
+														<span class="price">$[[${#numbers.formatDecimal(p.giaBan,0,'COMMA',2,'POINT')}]]</span>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
 							<div class="swiper-button-prev">
 								<i class="zmdi zmdi-chevron-left"></i>
 							</div>
