--- a/src/main/resources/templates/layout/_menu.html
+++ b/src/main/resources/templates/layout/_menu.html
@@ -125,6 +125,9 @@
 											<li>
 												<a th:href="@{/auth/change-password}">Đổi mật khẩu</a>
 											</li>
+											<li >
+												<a th:href="@{/auth/change-info}">Thông tin tài khoản</a>
+											</li>
 											<li>
 												<a th:href="@{/auth/logout}">Đăng xuất</a>
 											</li>
