--- a/src/main/resources/templates/auth/change-info.html
+++ b/src/main/resources/templates/auth/change-info.html
@@ -35,7 +35,7 @@
                     </span>
                     <span>
                              <img id="previewImage" th:src="@{'/assets/images/' + ${account.photo}}" alt=""
-                             style="width: 70%; margin-top: 5rem">
+                             style="width: 70%; height: 360px; margin-top: 5rem">
                     </span>
 
 
@@ -78,6 +78,7 @@
                             <button type="submit" class="btn btn-success">
                                 <i class="far fa-save"></i> Cập nhật thông tin
                             </button>
+
                         </div>
                     </form>
                 </div>
